syntax = "proto3";

package auth;

service AuthService {
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Login(LoginRequest) returns (AuthResponse);
    rpc ValidateToken(ValidateRequest) returns (ValidateResponse);
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    int32 role_id = 4;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message ValidateRequest {
    string token = 1;
}

message AuthResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
    string token = 4;
}

message ValidateResponse {
    bool valid = 1;
    User user = 2;
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    int32 role_id = 4;
}
